{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 43,
  "lineage": "a31fa0bc-1453-1915-8778-4acc1fdd573b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009f2673fe76d3eb6",
            "arn": "arn:aws:ec2:us-east-1:122610494163:elastic-ip/eipalloc-009f2673fe76d3eb6",
            "association_id": "eipassoc-0faf608eb150bdf0a",
            "domain": "vpc",
            "id": "eipalloc-009f2673fe76d3eb6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e955545791ddaf8d",
            "private_dns": "ip-10-0-101-182.ec2.internal",
            "private_ip": "10.0.101.182",
            "public_dns": "ec2-52-6-73-52.compute-1.amazonaws.com",
            "public_ip": "52.6.73.52",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tech-test-terraform-nat-ip-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-test-terraform-nat-ip-dev",
              "Project": "my-project",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610494163:internet-gateway/igw-06b545c1534f40658",
            "id": "igw-06b545c1534f40658",
            "owner_id": "122610494163",
            "tags": {
              "Name": "tech-test-terraform-igw-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-test-terraform-igw-dev",
              "Project": "my-project",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b7b3932fe090aba9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009f2673fe76d3eb6",
            "association_id": "eipassoc-0faf608eb150bdf0a",
            "connectivity_type": "public",
            "id": "nat-0fed53b72cf4c81ee",
            "network_interface_id": "eni-0e955545791ddaf8d",
            "private_ip": "10.0.101.182",
            "public_ip": "52.6.73.52",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06c5e054c0bd08a43",
            "tags": {
              "Name": "tech-test-terraform-nat-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-test-terraform-nat-dev",
              "Project": "my-project",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610494163:route-table/rtb-0aa9bad2bc2c6b9be",
            "id": "rtb-0aa9bad2bc2c6b9be",
            "owner_id": "122610494163",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fed53b72cf4c81ee",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tech-test-terraform-private-rt-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-test-terraform-private-rt-dev",
              "Project": "my-project",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7b3932fe090aba9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610494163:route-table/rtb-0c05542f532b84e23",
            "id": "rtb-0c05542f532b84e23",
            "owner_id": "122610494163",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b545c1534f40658",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tech-test-terraform-public-rt-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-test-terraform-public-rt-dev",
              "Project": "my-project",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7b3932fe090aba9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa3fd7981d997d43",
            "route_table_id": "rtb-0aa9bad2bc2c6b9be",
            "subnet_id": "subnet-0770cff71d0087667"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2a959a80657f3f4",
            "route_table_id": "rtb-0aa9bad2bc2c6b9be",
            "subnet_id": "subnet-01e77dd720c282a67"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ddc39dbf98fc2ea",
            "route_table_id": "rtb-0aa9bad2bc2c6b9be",
            "subnet_id": "subnet-0e65367eb13a68d86"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0d7a2ef1166c6eb",
            "route_table_id": "rtb-0c05542f532b84e23",
            "subnet_id": "subnet-06c5e054c0bd08a43"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046bb64c1c95cc593",
            "route_table_id": "rtb-0c05542f532b84e23",
            "subnet_id": "subnet-00e273b6104536ea5"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093bb0c87eadd37c5",
            "route_table_id": "rtb-0c05542f532b84e23",
            "subnet_id": "subnet-0bb91f5c55459ab46"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610494163:security-group/sg-0472595245255f5ff",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0472595245255f5ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tech-test-terraform-eks-cluster-dev",
            "name_prefix": "",
            "owner_id": "122610494163",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tech-test-terraform-eks-sg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-test-terraform-eks-sg-dev",
              "Project": "my-project",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7b3932fe090aba9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610494163:security-group/sg-0a8af5bce1a5f3d20",
            "description": "Security group for RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8af5bce1a5f3d20",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0472595245255f5ff"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "tech-test-terraform-rds-dev",
            "name_prefix": "",
            "owner_id": "122610494163",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tech-test-terraform-rds-sg-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-test-terraform-rds-sg-dev",
              "Project": "my-project",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7b3932fe090aba9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_cluster_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1980157899",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0472595245255f5ff",
            "security_group_rule_id": "sgr-0092542ed9fbe37d6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610494163:subnet/subnet-0770cff71d0087667",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0770cff71d0087667",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122610494163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tech-test-terraform-private-dev-1",
              "kubernetes.io/cluster/tech-test-terraform-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-test-terraform-private-dev-1",
              "Project": "my-project",
              "Terraform": "true",
              "kubernetes.io/cluster/tech-test-terraform-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b7b3932fe090aba9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610494163:subnet/subnet-01e77dd720c282a67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e77dd720c282a67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122610494163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tech-test-terraform-private-dev-2",
              "kubernetes.io/cluster/tech-test-terraform-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-test-terraform-private-dev-2",
              "Project": "my-project",
              "Terraform": "true",
              "kubernetes.io/cluster/tech-test-terraform-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b7b3932fe090aba9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610494163:subnet/subnet-0e65367eb13a68d86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e65367eb13a68d86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122610494163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tech-test-terraform-private-dev-3",
              "kubernetes.io/cluster/tech-test-terraform-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-test-terraform-private-dev-3",
              "Project": "my-project",
              "Terraform": "true",
              "kubernetes.io/cluster/tech-test-terraform-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b7b3932fe090aba9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610494163:subnet/subnet-06c5e054c0bd08a43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c5e054c0bd08a43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122610494163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tech-test-terraform-public-dev-1",
              "kubernetes.io/cluster/tech-test-terraform-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-test-terraform-public-dev-1",
              "Project": "my-project",
              "Terraform": "true",
              "kubernetes.io/cluster/tech-test-terraform-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b7b3932fe090aba9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610494163:subnet/subnet-00e273b6104536ea5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e273b6104536ea5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122610494163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tech-test-terraform-public-dev-2",
              "kubernetes.io/cluster/tech-test-terraform-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-test-terraform-public-dev-2",
              "Project": "my-project",
              "Terraform": "true",
              "kubernetes.io/cluster/tech-test-terraform-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b7b3932fe090aba9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610494163:subnet/subnet-0bb91f5c55459ab46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb91f5c55459ab46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122610494163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tech-test-terraform-public-dev-3",
              "kubernetes.io/cluster/tech-test-terraform-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-test-terraform-public-dev-3",
              "Project": "my-project",
              "Terraform": "true",
              "kubernetes.io/cluster/tech-test-terraform-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b7b3932fe090aba9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610494163:vpc/vpc-0b7b3932fe090aba9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bf7b1b8711cf0aae",
            "default_route_table_id": "rtb-060dae185ef6bf094",
            "default_security_group_id": "sg-09486ee0b59292f1f",
            "dhcp_options_id": "dopt-0d4cd33ed898427dc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b7b3932fe090aba9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-060dae185ef6bf094",
            "owner_id": "122610494163",
            "tags": {
              "Name": "tech-test-terraform-vpc-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tech-test-terraform-vpc-dev",
              "Project": "my-project",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610494163:vpc-endpoint/vpce-040aae905a4cc9387",
            "dns_entry": [
              {
                "dns_name": "vpce-040aae905a4cc9387-9y88ny19.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-040aae905a4cc9387-9y88ny19-us-east-1c.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-040aae905a4cc9387-9y88ny19-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-040aae905a4cc9387-9y88ny19-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06121601HVHO51GUDI9D"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z05824322ABTZ5JBU6IUB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-040aae905a4cc9387",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06cefd07932e7987f",
              "eni-08ca3d19d70ae9acc",
              "eni-0f3ce1f524d1b6fd8"
            ],
            "owner_id": "122610494163",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0472595245255f5ff"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.64",
                "subnet_id": "subnet-0770cff71d0087667"
              },
              {
                "ipv4": "10.0.2.178",
                "subnet_id": "subnet-01e77dd720c282a67"
              },
              {
                "ipv4": "10.0.3.198",
                "subnet_id": "subnet-0e65367eb13a68d86"
              }
            ],
            "subnet_ids": [
              "subnet-01e77dd720c282a67",
              "subnet-0770cff71d0087667",
              "subnet-0e65367eb13a68d86"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tech-test-terraform-dev-ecr-api-endpoint",
              "Project": "tech-test-terraform",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tech-test-terraform-dev-ecr-api-endpoint",
              "Project": "tech-test-terraform",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b7b3932fe090aba9"
          },
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610494163:vpc-endpoint/vpce-08eb0ede6787fd9e1",
            "dns_entry": [
              {
                "dns_name": "vpce-08eb0ede6787fd9e1-hajh4q6s.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08eb0ede6787fd9e1-hajh4q6s-us-east-1c.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08eb0ede6787fd9e1-hajh4q6s-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08eb0ede6787fd9e1-hajh4q6s-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z10222422VWK325Y2KU1M"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z10222422VWK325Y2KU1M"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z05895141NXDLXT2A0X36"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z05895141NXDLXT2A0X36"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08eb0ede6787fd9e1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-004050fe7d147c37e",
              "eni-01e9676acec97eb77",
              "eni-022787a65ad07d149"
            ],
            "owner_id": "122610494163",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0472595245255f5ff"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.5",
                "subnet_id": "subnet-0770cff71d0087667"
              },
              {
                "ipv4": "10.0.2.151",
                "subnet_id": "subnet-01e77dd720c282a67"
              },
              {
                "ipv4": "10.0.3.19",
                "subnet_id": "subnet-0e65367eb13a68d86"
              }
            ],
            "subnet_ids": [
              "subnet-01e77dd720c282a67",
              "subnet-0770cff71d0087667",
              "subnet-0e65367eb13a68d86"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tech-test-terraform-dev-ecr-dkr-endpoint",
              "Project": "tech-test-terraform",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tech-test-terraform-dev-ecr-dkr-endpoint",
              "Project": "tech-test-terraform",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b7b3932fe090aba9"
          },
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122610494163:vpc-endpoint/vpce-05edbe3268526eec5",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-05edbe3268526eec5",
            "owner_id": "122610494163",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0aa9bad2bc2c6b9be",
              "rtb-0c05542f532b84e23"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tech-test-terraform-dev-s3-endpoint",
              "Project": "tech-test-terraform",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "tech-test-terraform-dev-s3-endpoint",
              "Project": "tech-test-terraform",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b7b3932fe090aba9"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    }
  ]
}